--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-HEALTH_SERVICE=":50052"
-MONGO_URI="mongodb://localhost:27017"
+HEALTH_SERVICE="health:50052"
+MONGO_URI="mongodb://mongo:27017"
 MONGODB_NAME="health_medicine"
-REDIS_ADDR="localhost:6379"
+REDIS_ADDR="redis:6379"
 REDIS_PASSWORD=""
 REDIS_DB=0
 KAFKA_BROKERS="localhost:9092"
